deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbhydra2
  labels:
    app: nzbhydra2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbhydra2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nzbhydra2
    spec:
      containers:
      - name: nzbhydra2
        image: jmeritt/nzbhydra2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "250m"
            memory: "500Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"
        ports:
        - containerPort: 5076
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        emptyDir: {}
      - name: config-src
        configMap: 
          name: nzbhydra2-config
