service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra2
  labels:
    app: nzbhydra2
spec:
  ports:
  - port: 5076
    targetPort: 5076
  selector:
    app: nzbhydra2
