ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbhydra2
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: nzbhydra2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nzbhydra2
            port:
              number: 5076
